--- a/n215final/scss/quotes.scss
+++ b/n215final/scss/quotes.scss
@@ -61,8 +61,13 @@
             .quote{
                 flex-direction: column;
 
+                img{
+                    width: 100%;
+                }
+
                 .excerpt{
                     margin-top: 20px;
+                    margin-left: 0px;
                 }
             }
         }
