--- a/n215final/css/styles.css
+++ b/n215final/css/styles.css
@@ -121,7 +121,6 @@ header .homeNav {
 }
 header .homeNav .logo {
   margin-right: auto;
-  border: 2px solid #fff;
   padding: 1rem;
 }
 header .homeNav nav a {
@@ -142,7 +141,6 @@ header .navHolder {
 }
 header .navHolder .logo {
   margin-right: auto;
-  border: 2px solid #000;
   padding: 1rem;
 }
 header .navHolder nav a {
@@ -213,6 +211,19 @@ header .about p {
     justify-content: space-around;
     flex-wrap: wrap;
     margin: -5px;
+    font-size: 0.9em;
+  }
+  .homeNav .logo {
+    margin-left: 1em;
+    font-size: 12px;
+  }
+  .homeNav nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: -5px;
+    font-size: 0.9em;
   }
   .about {
     width: 90%;
@@ -440,7 +451,6 @@ footer .footerContainer {
   max-width: 980px;
 }
 footer .footerContainer .logo {
-  border: 2px solid #FFF;
   padding: 1rem;
 }
 footer .footerContainer .socials {
@@ -461,12 +471,16 @@ footer .footerContainer .socials .twitter {
 }
 
 @media (max-width: 860px) {
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   footer .footerContainer {
     flex-wrap: wrap;
   }
   footer .footerContainer .logo {
     margin-left: 1em;
-    font-size: 12px;
   }
   footer .footerContainer .socials {
     margin-right: 1em;
@@ -481,15 +495,17 @@ footer .footerContainer .socials .twitter {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 150px;
   }
   footer .footerContainer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 200px;
+    margin-bottom: 20px;
   }
   footer .footerContainer .logo {
     margin: 0;
+    width: 50%;
   }
   footer .footerContainer .socials {
     margin: 0;
@@ -552,8 +568,12 @@ footer .footerContainer .socials .twitter {
   .quote-container .quotes .quote {
     flex-direction: column;
   }
+  .quote-container .quotes .quote img {
+    width: 100%;
+  }
   .quote-container .quotes .quote .excerpt {
     margin-top: 20px;
+    margin-left: 0px;
   }
 }
 .tour-section {
@@ -840,6 +860,7 @@ main .blog .blogPost .post .secondary {
   }
 }
 main .contact {
+  width: 100%;
   margin: 0 auto;
   max-width: 980px;
   font-family: "Proxima Nova";
@@ -886,6 +907,7 @@ main .contact .contactPage .right .form input {
   height: 60px;
   background-color: #F5F5F5;
   border: none;
+  padding-left: 20px;
 }
 main .contact .contactPage .right .form .message {
   min-width: 100%;
@@ -906,13 +928,52 @@ main .contact .contactPage .right .form a {
 }
 
 @media (max-width: 860px) {
+  h1 {
+    margin-left: 10px;
+  }
   .contactPage {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     margin: 0 auto;
     width: 0;
+  }
+  .contactPage .left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+  }
+  .contactPage .left .contactInfo {
+    text-align: center;
+  }
+}
+@media (max-width: 590px) {
+  .contact {
+    width: 100%;
+  }
+  .form {
+    margin: 0 auto;
+    width: 90%;
+  }
+}
+@media (max-width: 480px) {
+  .contact {
+    width: 100%;
+  }
+  .form {
+    margin: 0 auto;
+    width: 80%;
+  }
+}
+@media (max-width: 400px) {
+  .contact {
+    width: 100%;
+  }
+  .form {
+    margin: 0 auto;
+    width: 60%;
   }
 }
 
