--- a/n215final/scss/contact.scss
+++ b/n215final/scss/contact.scss
@@ -1,6 +1,6 @@
 main{
     .contact{
-
+        width: 100%;
         h1{
             font-size: 40px;
             margin-top: 55px;
@@ -53,6 +53,7 @@ main{
                         height: 60px;
                         background-color: #F5F5F5;
                         border: none;
+                        padding-left: 20px;
                     }
 
                     .message{
@@ -84,13 +85,66 @@ main{
 }
 
 @media (max-width: 860px) {
+    h1{
+        margin-left: 10px;
+    }
+
     .contactPage{
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: center;
+
+        .left{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 40px;
+
+            .contactInfo{
+                text-align: center;
+            }
+            
+            
+        }
         
         margin: 0 auto;
         width: 0;
+    }
+}
+
+@media (max-width: 590px) {
+    
+    .contact{
+        width: 100%;
+    }
+
+    .form{
+        margin: 0 auto;
+        width: 90%;
+    }
+}
+
+@media (max-width: 480px) {
+    
+    .contact{
+        width: 100%;
+    }
+
+    .form{
+        margin: 0 auto;
+        width: 80%;
+    }
+}
+
+@media (max-width: 400px) {
+    
+    .contact{
+        width: 100%;
+    }
+
+    .form{
+        margin: 0 auto;
+        width: 60%;
     }
 }
