--- a/n215final/scss/header.scss
+++ b/n215final/scss/header.scss
@@ -110,7 +110,6 @@ header{
         
         .logo{
             margin-right: auto;
-            border: 2px solid #fff;
             padding: 1rem;
         }
 
@@ -136,7 +135,6 @@ header{
         
         .logo{
             margin-right: auto;
-            border: 2px solid #000;
             padding: 1rem;
         }
 
@@ -226,6 +224,23 @@ header{
             justify-content: space-around;
             flex-wrap: wrap;
             margin: -5px;
+            font-size: 0.9em;
+        }
+    }
+
+    .homeNav{
+        .logo{
+            margin-left: 1em;
+            font-size: 12px;
+        }
+
+        nav{
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            margin: -5px;
+            font-size: 0.9em;
         }
     }
 
