--- a/n215final/scss/tour.scss
+++ b/n215final/scss/tour.scss
@@ -57,6 +57,10 @@
 
     .zealand{
         background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url(../img/zealand.png);
+        
+        h1{
+            font-size: 3em;
+        }
     }
 
     .france{
@@ -95,5 +99,11 @@
             min-width: 80vw;
             height: 40vh;
         } 
+
+        .zealand{
+            h1{
+                font-size: 4em;
+            }
+        }
     } 
 }
