--- a/n215final/scss/blog.scss
+++ b/n215final/scss/blog.scss
@@ -34,13 +34,20 @@ main{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-content: space-between;
+                
                 color: $site-white;
                 margin-right: 20px;
 
                 .num{
                     font-weight: bold;
+                    font-size: 25px;
+                    margin-bottom: 0;
+                }
+
+                p{
                     font-size: 20px;
+                    margin-bottom: 0;
+                    font-weight: bold;
                 }
             }
 
