--- a/n215final/scss/form.scss
+++ b/n215final/scss/form.scss
@@ -107,6 +107,7 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-evenly;
+                gap: 20px;
                 
                 .left{
                     min-width: 90%;
